# ORBA_OS

./: .gitignore  AUDIT_ECOSYSTEM.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  LICENSE  ORBA_ECOSYSTEM.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
Orba_OS_Desktop/: CONTRIBUTING.md  README.md
Orba_OS_Desktop/backend/: .env.example  agent.py  gateway.py  main.py  memory.py  requirements.txt  stt.py  tools.py  tts.py  whatsapp_gateway.py
Orba_OS_Desktop/frontend/: app.js  index.html  style.css
Orba_OS_Desktop/src-tauri/: Cargo.toml  tauri.conf.json
Orba_OS_Desktop/src-tauri/capabilities/: default.json
Orba_OS_Mobile/: AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  settings.gradle.kts
Orba_OS_Mobile/app/: build.gradle.kts
Orba_OS_Mobile/app/src/main/: AndroidManifest.xml
Orba_OS_Mobile/app/src/main/cpp/: CMakeLists.txt  piper_jni.cpp
Orba_OS_Mobile/app/src/main/kotlin/com/google/samples/apps/nowinandroid/: DownloadScreen.kt  MainActivity.kt  NiaApplication.kt  OrbaProactiveService.kt  OrbaViewModel.kt  ProfileScreen.kt
Orba_OS_Mobile/app/src/main/kotlin/com/google/samples/apps/nowinandroid/tools/: AndroidSystemTool.kt  GoogleNewsTool.kt  ModelDownloader.kt  OrbaAgentManager.kt
Orba_OS_Mobile/app/src/main/res/values/: strings.xml
Orba_OS_Mobile/core/designsystem/: build.gradle.kts
Orba_OS_Mobile/gradle/: libs.versions.toml
github/: PULL_REQUEST_TEMPLATE.md
github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
github/workflows/: ci.yml
(+5 files in other folders)
